k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
  annotations:
    cert-manager.io/issuer: gitlab-issuer
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: demo-app.89-208-86-40.sslip.io  # Замените на ваш домен
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app-service
                port:
                  number: 80
